20060614 code: updated sysdeps
20060620 code: updated sysdeps
20060620 code: linux-ppc fix for t_get_opt
20060627 code: changed to unsigned longs for paranoid type safety.
20060627 code: removed str_copy and str_ncopy.
20060705 code: header format change from sysdeps
20060705 code: darwin libname compat
20060705 version: corelib-0.40
20060706 code: hpux -> hp-ux in sysdep-subs.
20060709 code: fd_dup now uses the atomic fd_dup2 if available.
20060718 code: bin_same now a macro.
20060718 code: bin_diff interface changed to match str_diff (why was
               this not done before?).
20060718 code: bin_char and bin_rchar added with tests.
20060718 code: sgetline_get now uses bin_char instead of bin_chr.
20060718 code: sgetline_get now returns blank lines instead of skipping.
20060718 code: str_char and str_rchar added with tests.
20060719 code: dstring and sstring now use unsigned long. this change
               was made on 20060627 but apparently somehow didn't make
               it into the commit.
20060719 code: installer update.
20060719 note: previous version withdrawn!
20060719 version: corelib-0.41
20060728 code: added EOVERFLOW/error_overflow to error.
20060802 code: hashtable re-implement with tests.
20060805 code: re-added old sosuffix support script for installer.
20060812 code: new installer, bin interface changed to void *
20060821 code: error_loop
20060827 code: new coreproject tools
20060827 code: fd_dup return statement inside #ifdef as opposed to
               outside.
20060915 code: added str_casei* (case insensitive string comparison)
               and updated tests.
               new coreproject tools and makefile.
20060916 version: corelib-0.42 (no release)
20061003 code: get_opt_reset()
20061003 version: corelib-0.43
20061007 code: missing header files in insthier
20061003 version: corelib-0.431
20061013 code: endian.h and signal.h conflict with standard C library
               on linux. renamed to sig.h and byteorder.h